# low-qwit

./: CHANGELOG.md  Cargo.toml  README.md  justfile  release.toml
src/: core.rs  epoch_conversion.rs  lib.rs  lines.rs
src/csv_reader/: mod.rs
src/from_excel/: mod.rs  operators.rs
src/structure/: schema.rs
