[package]
name = "qwitlib"
version = "0.3.3"
edition = "2021"
authors = ["Silen Locatelli"]
description = "A library for dsv files"
readme = "README.md"
repository = "https://github.com/Qwitqwit/qwitlib"
license = "MIT"

[dependencies]
time = "0.3"
chrono = "0.4"
calamine = "0.24"

[dev-dependencies]
tempfile = "3"
